cafe/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  tls:
  - hosts:
    - cafe.apps.devops.vertigo.com.br
    secretName: cafe-secret
  - hosts:
    - tea.apps.devops.vertigo.com.br
    secretName: cafe-secret
  rules:
  - host: tea.apps.devops.vertigo.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: tea-svc
          servicePort: 80
  - host: cafe.apps.devops.vertigo.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-svc
          servicePort: 80
